--- a/css/header.css
+++ b/css/header.css
@@ -63,6 +63,7 @@ header li {
         display: none;
     }
 
+    /* ---------- 三本線 ---------- */
     #hamburger {
         position: relative;
         width: 25px;
@@ -104,16 +105,17 @@ header li {
         height: 2px;
         background-color: #aaaaaa;
     }
+    /* ------------------------------------ */
 
     .sp_nav {
         position: fixed;
         top: 0;
-        left: 0;
-        width: 100%;
+        left: 70%;
+        width: 30%;
         height: 100%;
         display: block;
-        background-color: #b5aeaacc;
-        transform: translateY(-100%);
+        background-color: #08b;
+        transform: translateX(100%);
         transition: all .2s ease-in-out;
     }
 
@@ -131,7 +133,7 @@ header li {
 
     .sp_nav li {
         color: #ffffff;
-        font-size: 3rem;
+        font-size: 1.5rem;
     }
 
     .sp_nav li a {
